tests/parsing/smtlib/v2.7/errors/072_declare-sort_bad_name_1.smt2
(set-logic ALL)
(declare-sort _)
